# clipboard-hero

./: CMakeLists.txt  README.md  local-build-msvc2019.cmd
src/: main.cpp
